Update styling of sidebar border

--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,3 +1,8 @@
+.client_channels_list_container {
+  background-color: $color-shade-dark;
+  border-right-color: $color-shade-dark;
+}
+
 #col_channels {
   background-color: $color-shade-dark;
   color: $base-font-color;
