Add style for active modal buttons

--- a/scss/modules/modals/_base.scss
+++ b/scss/modules/modals/_base.scss
@@ -80,6 +80,10 @@
     }
   }
 
+  &.fs_modal_header .fs_modal_btn:active {
+    color: $base-font-color;
+  }
+
   #fs_modal_footer {
     background-color: $color-shade-dark;
   }
